Update BeanUtil.java